Fix offline launching